Yaml_ArgoCD_Test/aws/dev/was-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: was-dep
  labels:
    app: was
spec:
  replicas: 2
  selector:
    matchLabels:
      app: was
  template:
    metadata:
      labels:
        app: was
    spec:
      serviceAccountName: storage-sa
      containers:
      - name: was
        image: jjy4041/ssgpang:6f3fdeb21720032f3f08cc39d95220a19ebfb530
        # image: jjy4041/ssgpang:35a0ea78de3c0e2808ceff7701eea8fb400a2402
        ports:
        - containerPort: 80
      tolerations:
      - key: "app"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
